--- a/journal_app/templates/journal/entry_detail.html
+++ b/journal_app/templates/journal/entry_detail.html
@@ -1,6 +1,20 @@
 {%  extends 'base.html' %}
 
-{% block title %}{% endblock %}
+{% block title %}{{ entry.title }}{% endblock %}
 
 {% block content %}
+  <div class="row">
+    <div class="col-lg-8">
+      <h2>{{ entry.title }}</h2>
+      <p>Created: {{ entry.created }}</p>
+      {% if entry.modified %}
+        <p>Updated: {{ entry.updated }}</p>
+      {% endif %}
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-8">
+      <p>{{ entry.text }}</p>
+    </div>
+  </div>
 {% endblock %}
