--- a/journal_app/templates/journal/entry_list.html
+++ b/journal_app/templates/journal/entry_list.html
@@ -6,12 +6,12 @@
   {% for entry in entry_list %}
     <div class="row">
       <div class="col-lg-8">
-        <h3>{{ entry.title }}</h3>
+        <a href="{{ entry.get_absolute_url }}" class="header-link"><h3>{{ entry.title }}</h3></a>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-8">
-        <p>{{ entry.text|truncatewords:25 }}</p>
+        <p>{{ entry.body|truncatewords:25 }}</p>
       </div>
     </div>
     <hr>
