--- a/journal_app/templates/journal/contact_list.html
+++ b/journal_app/templates/journal/contact_list.html
@@ -6,7 +6,7 @@
   {% for contact in contact_list %}
     <div class="row">
       <div class="col-lg-8">
-        <h3><a href="{{ contact.get_absolute_url }}">{{ contact.name }}</a></h3>
+        <h3><a href="{{ contact.get_absolute_url }}" class="header-link">{{ contact.name }}</a></h3>
       </div>
     </div>
   {% empty %}
