--- a/journal_app/templates/navbar.html
+++ b/journal_app/templates/navbar.html
@@ -1,6 +1,6 @@
 {% load static i18n %}
 <div class="mb-1">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-custom">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -10,41 +10,52 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               {% url 'home' as active_url %}
-                <li class="nav-item{% if request.path == active_url %} active{% endif %}">
+                <li class="nav-item">
 
-                    <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link{% if request.path == active_url %} active{% endif %}" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
               {% url 'about' as active_url %}
-                <li class="nav-item{% if request.path == active_url %} active{% endif %}">
-                    <a class="nav-link" href="{% url 'about' %}">About</a>
+                <li class="nav-item">
+                    <a class="nav-link{% if request.path == active_url %} active{% endif %}" href="{% url 'about' %}">About</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 {% if request.user.is_authenticated %}
-                  {% url 'journal:entry_create' as active_url %}
-                    <li class="nav-item{% if request.path == active_url %} active{% endif %}">
-                      <a class="nav-link" href="{% url 'journal:entry_create' %}"><i class="fas fa-plus"></i> {% trans "Add" %}</a>
+                  {% url 'journal:entry_create' as journal_url %}
+                  {% url 'journal:contact_create' as contact_url %}
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle{% if request.path == journal_url or request.path == contact_url%} active{% endif %}" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-plus"></i> {% trans "Add" %}
+                      </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="{% url 'journal:entry_create' %}">
+                        <i class="fas fa-plus"></i> {% trans "Add Entry" %}
+                      </a>
+                      <a class="dropdown-item" href="{% url 'journal:contact_create' %}">
+                        <i class="fas fa-plus"></i> {% trans "Add Contact" %}
+                      </a>
+                    </div>
                     </li>
                   {% url 'users:detail' request.user.username as active_url %}
-                    <li class="nav-item{% if request.path == active_url %} active{% endif %}">
+                    <li class="nav-item">
                         {# URL provided by django-allauth/account/urls.py #}
-                        <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a>
+                        <a class="nav-link{% if request.path == active_url %} active{% endif %}" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a>
                     </li>
                   {% url 'account_logout' as active_url %}
-                    <li class="nav-item{% if request.path == active_url %} active{% endif %}">
+                    <li class="nav-item">
                         {# URL provided by django-allauth/account/urls.py #}
-                        <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
+                        <a class="nav-link{% if request.path == active_url %} active{% endif %}" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
                     </li>
                 {% else %}
                   {% url 'account_signup' as active_url %}
-                    <li class="nav-item{% if request.path == active_url %} active{% endif %}">
+                    <li class="nav-item">
                         {# URL provided by django-allauth/account/urls.py #}
-                        <a id="sign-up-link" class="nav-link" href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a>
+                        <a id=" sign-up-link" class="nav-link{% if request.path == active_url %} active{% endif %}" href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a>
                     </li>
                   {% url 'account_login' as active_url %}
-                    <li class="nav-item{% if request.path == active_url %} active{% endif %}">
+                    <li class="nav-item">
                         {# URL provided by django-allauth/account/urls.py #}
-                        <a id="log-in-link" class="nav-link" href="{% url 'account_login' %}">{% trans "Sign In" %}</a>
+                        <a id="log-in-link" class="nav-link{% if request.path == active_url %} active{% endif %}" href="{% url 'account_login' %}">{% trans "Sign In" %}</a>
                     </li>
                 {% endif %}
             </ul>
