--- a/journal_app/templates/base.html
+++ b/journal_app/templates/base.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A journalling application that will allow your notes to be sent to someone you love once you pass.">
     <meta name="author" content="CJ Stein">
-
+    {% block head %
+    {% endblock %}
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -19,7 +20,9 @@
     {% block tinymce_init %}
       <script>
         tinymce.init({
-          selector: '#tinymceid'
+          selector: '#tinymceid',
+          plugins: false,
+          contextmenu: false,
         });
       </script>
     {% endblock %}
