--- a/journal_app/templates/journal/entry_list.html
+++ b/journal_app/templates/journal/entry_list.html
@@ -2,6 +2,10 @@
 
 {% block title %}{{ entry.title }}{% endblock %}
 
+{% block head %}
+  {{ form.media }}
+{% endblock %}
+
 {% block content %}
   {% for entry in entry_list %}
     <div class="row">
@@ -11,12 +15,12 @@
     </div>
     <div class="row">
       <div class="col-lg-8">
-        <p>{{ entry.body|truncatewords:25 }}</p>
+        <p>{{ entry.body|safe|truncatewords:25 }}</p>
       </div>
     </div>
     <hr>
   {% empty %}
-    <h2>There are no entries yet.</h2>
+    <h2>There are no entries yet. <a href="{% url 'journal:entry_create' %}" class="page-link">Add one here!</a></h2>
   {% endfor %}
 
 
