--- a/journal_app/templates/base.html
+++ b/journal_app/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A journalling application that will allow your notes to be sent to someone you love once you pass.">
     <meta name="author" content="CJ Stein">
-    {% block head %
+    {% block head %}
     {% endblock %}
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
