--- a/journal_app/templates/journal/entry_detail.html
+++ b/journal_app/templates/journal/entry_detail.html
@@ -19,9 +19,9 @@
     </div>
   </div>
   <div class="row">
+
     <div class="col-lg-8">
-      <p>{{ entry.body|safe }}</p>
-      <p>{{ entry.body }}</p>
+      {{ entry.body|safe }}
     </div>
   </div>
 {% endblock %}
