--- a/journal_app/templates/journal/entry_list.html
+++ b/journal_app/templates/journal/entry_list.html
@@ -15,7 +15,7 @@
     </div>
     <div class="row">
       <div class="col-lg-8">
-        <p>{{ entry.body|safe|truncatewords:25 }}</p>
+        {{ entry.body|safe|truncatewords:25 }}
       </div>
     </div>
     <hr>
