--- a/journal_app/templates/account/email_confirm.html
+++ b/journal_app/templates/account/email_confirm.html
@@ -3,11 +3,11 @@
 {% load i18n %}
 {% load account %}
 
-{% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
+{% block head_title %}Confirm E-mail Address{% endblock %}
 
 
 {% block inner %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
+<h1>Confirm E-mail Address</h1>
 
 {% if confirmation %}
 
