--- a/journal_app/templates/account/login.html
+++ b/journal_app/templates/account/login.html
@@ -4,11 +4,11 @@
 {% load account socialaccount %}
 {% load crispy_forms_tags %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block head_title %}Sign In{% endblock %}
 
 {% block inner %}
 
-<h1>{% trans "Sign In" %}</h1>
+<h1>Sign In</h1>
 
 {% get_providers as socialaccount_providers %}
 
@@ -40,8 +40,8 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction btn btn-primary" type="submit">{% trans "Sign In" %}</button>
+  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">Forgot Password?</a>
+  <button class="primaryAction btn btn-primary" type="submit">Sign In</button>
 </form>
 
 {% endblock %}
