--- a/journal_app/templates/account/password_reset_from_key_done.html
+++ b/journal_app/templates/account/password_reset_from_key_done.html
@@ -1,10 +1,10 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% block head_title %}Change Password{% endblock %}
 
 {% block inner %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+    <h1>Change Password</h1>
+    <p>Your password is now changed.</p>
 {% endblock %}
 
