--- a/journal_app/templates/account/signup_closed.html
+++ b/journal_app/templates/account/signup_closed.html
@@ -2,11 +2,11 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
+{% block head_title %}Sign Up Closed{% endblock %}
 
 {% block inner %}
-<h1>{% trans "Sign Up Closed" %}</h1>
+<h1>Sign Up Closed</h1>
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+<p>We are sorry, but the sign up is currently closed.</p>
 {% endblock %}
 
