--- a/journal_app/templates/base.html
+++ b/journal_app/templates/base.html
@@ -15,17 +15,9 @@
     <![endif]-->
 
     <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
-    <!-- # tinycloud MCE -->
-    <script src="https://cdn.tiny.cloud/1/1tfb3g0qaiap1ehx0nfximy04m02qfebkdzf8pvd6ant5bhg/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
-    {% block tinymce_init %}
-      <script>
-        tinymce.init({
-          selector: '#tinymceid',
-          plugins: false,
-          contextmenu: false,
-        });
-      </script>
-    {% endblock %}
+
+
+
 
     <!-- Latest compiled and minified Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -43,7 +35,11 @@
   </head>
 
   <body>
-    {% include 'navbar.html' %}
+    {% if request.user.is_authenticated %}
+      {% include 'navbar.html' %}
+    {% else %}
+      {% include 'navbar_new_user.html' %}
+    {% endif %}
     <div class="container">
 
       {% if messages %}
@@ -74,6 +70,7 @@
 
 
       <!-- place project specific Javascript in this file -->
+    <!-- # tinycloud MCE -->
     {% block javascript %}
       <script src="{% static 'js/project.js' %}"></script>
     {% endblock javascript %}
