--- a/journal_app/templates/navbar.html
+++ b/journal_app/templates/navbar.html
@@ -7,7 +7,7 @@
         <a class="navbar-brand" href="{% url 'home' %}">Journal App</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-              {% url 'journal:entry_list' as entry_list_url %}
+              {% url 'journal:entry_list' as active_url %}
                 <li class="nav-item">
                     <a class="nav-link{% if request.path == active_url %} active{% endif %}" href="{% url 'journal:entry_list' %}">My Entries</a>
                 </li>
