added margin to top

--- a/journal_app/templates/journal/contact_list.html
+++ b/journal_app/templates/journal/contact_list.html
@@ -5,7 +5,7 @@
 {% block content %}
   {% for contact in contact_list %}
     {% if forloop.first %}
-    <table class="table table-grey">
+    <table class="table table-grey mt-2">
       <thead>
         <tr>
           <th scope="col">Name</th>
