--- a/journal_app/templates/journal/entry_detail.html
+++ b/journal_app/templates/journal/entry_detail.html
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="col-lg-8">
       <h2>{{ entry.title }}</h2>
-      <h6><a href="{% url 'journal:entry_update' entry.uuid %}" class="page-link"><i class="far fa-edit"></i> Edit</a></h6>
+      <h6><a href="{% url 'journal:entry_update' entry.uuid %}" class="page-link mw-100"><i class="far fa-edit"></i> Edit</a></h6>
       <p>
         <b>Created:</b> {{ entry.created|date:"SHORT_DATETIME_FORMAT" }}
         {% if entry.modified %}
