--- a/journal_app/templates/account/verification_sent.html
+++ b/journal_app/templates/account/verification_sent.html
@@ -5,7 +5,7 @@
 {% block head_title %}Verify Your E-mail Address{% endblock %}
 
 {% block inner %}
-    <h1>{Verify Your E-mail Address</h1>
+    <h1>Verify Your E-mail Address</h1>
 
     <p>We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.</p>
 
