Updated Title Block

--- a/journal_app/templates/journal/contact_list.html
+++ b/journal_app/templates/journal/contact_list.html
@@ -1,6 +1,6 @@
 {%  extends 'base.html' %}
 
-{% block title %}{{ entry.title }}{% endblock %}
+{% block title %}Contact List{% endblock %}
 
 {% block content %}
   {% for contact in contact_list %}
