--- a/journal_app/templates/journal/entry_list.html
+++ b/journal_app/templates/journal/entry_list.html
@@ -1,6 +1,6 @@
 {%  extends 'base.html' %}
 
-{% block title %}{{ entry.title }}{% endblock %}
+{% block title %}Journal Entry List{% endblock %}
 
 {% block head %}
   {{ form.media }}
