fixing auto-complete

--- a/journal_app/templates/journal/entry_form.html
+++ b/journal_app/templates/journal/entry_form.html
@@ -24,9 +24,8 @@
         <table>
           {{ view.formset }}
         </table>
-        <span id="add-form" class="button">Add form</span>
-
-        <input type="submit" />
+      </form>
+    </div>
   {% endwith %}
 {% endblock %}
 
