--- a/journal_app/templates/journal/entry_detail.html
+++ b/journal_app/templates/journal/entry_detail.html
@@ -15,10 +15,10 @@
   </div>
   <div class="row">
     <div class="col-lg-6">
-      <h6><a href="{% url 'journal:entry_update' entry.uuid %}" class="page-link mw-50"><i class="far fa-edit"></i> Edit</a></h6>
+      <h6 class="text-center"><a href="{% url 'journal:entry_update' entry.uuid %}" class="page-link"><i class="far fa-edit"></i> Edit</a></h6>
     </div>
     <div class="col-lg-6">
-      <h6><a href="{% url 'journal:entry_delete' entry.uuid %}" class="page-link mw-50"><i class="fas fa-trash-alt"></i> Delete</a></h6>
+      <h6 class="text-center"><a href="{% url 'journal:entry_delete' entry.uuid %}" class="page-link"><i class="fas fa-trash-alt"></i> Delete</a></h6>
     </div>
   </div>
   <div class="row">
