--- a/journal_app/templates/journal/entry_form.html
+++ b/journal_app/templates/journal/entry_form.html
@@ -15,15 +15,18 @@
         {{ form.title|as_crispy_field }}
         {{ form.public|as_crispy_field }}
         {{ form.body|as_crispy_field }}
-        {{ form.contact|as_crispy_field }}
-        <button type="submit" class="btn btn-primary btn-lg btn-block">{{ action }}</button>
-        <table style="display: none">
-          {{ view.formset.empty_form }}
-        </table>
+        {% if contacts %}
+          {{ form.contact|as_crispy_field }}
 
-        <table>
-          {{ view.formset }}
-        </table>
+          <table style="display: none">
+            {{ view.formset.empty_form }}
+          </table>
+
+          <table>
+            {{ view.formset }}
+          </table>
+        {% endif %}
+        <button type="submit" class="btn btn-primary btn-lg btn-block">{{ action }}</button>
       </form>
     </div>
   {% endwith %}
