made empty add-on link more obvious

--- a/journal_app/templates/journal/contact_list.html
+++ b/journal_app/templates/journal/contact_list.html
@@ -34,7 +34,7 @@
       </table>
     {% endif %}
     {% empty %}
-    <h4>Contact list is empty.  <a href="{% url 'journal:contact_create' %}" class="page-link">Click here to add one!</a></h4>
+    <h2>There are no entries yet. <a href="{% url 'journal:contact_create' %}" class="btn btn-theme btn-lg btn-block"><i class="fas fa-plus"></i> Add one here!</a></h2>
   {% endfor %}
 
 {% endblock %}
