--- a/journal_app/templates/journal/contact_list.html
+++ b/journal_app/templates/journal/contact_list.html
@@ -11,6 +11,8 @@
           <th scope="col">Name</th>
           <th scope="col" class="text-center">Email</th>
           <th scope="col" class="text-center">Phone</th>
+          <th scope="col" class="text-center">Edit</th>
+          <th scope="col" class="text-center">Delete</th>
         </tr>
       </thead>
       {% endif %}
@@ -26,6 +28,12 @@
           {% if contact.phone %}
             <i class="fas fa-check"></i>
           {% endif %}
+        </td>
+        <td class="text-center">
+          <i class="fas fa-check"></i>
+        </td>
+        <td class="text-center">
+            <i class="fas fa-check"></i>
         </td>
       </tr>
 
