--- a/journal_app/templates/journal/entry_form.html
+++ b/journal_app/templates/journal/entry_form.html
@@ -26,7 +26,7 @@
             {{ view.formset }}
           </table>
         {% endif %}
-        <button type="submit" class="btn btn-primary btn-lg btn-block">{{ action }}</button>
+        <button type="submit" class="btn btn-theme btn-lg btn-block">{{ action }}</button>
       </form>
     </div>
   {% endwith %}
