Added email templates

--- a/journal_app/templates/account/email/welcome_email.html
+++ b/journal_app/templates/account/email/welcome_email.html
@@ -1,4 +1,4 @@
-{% extends 'email/email_base.html' %}
+{% extends 'account/email/base_message.html' %}
 
 {% block content %}
   <p>Welcome {{ user.username }}.  Thank you for joining the site!</p>
