--- a/journal_app/templates/account/email/welcome_email.html
+++ b/journal_app/templates/account/email/welcome_email.html
@@ -1,6 +1,13 @@
 {% extends 'account/email/base_message.html' %}
 
+{% block tagline %}
+Thank you for joining!
+{% endblock %}
+
+{% block header %}
+Thanks for joining!
+{% endblock %}
+
 {% block content %}
-  <p>Welcome {{ user.username }}.  Thank you for joining the site!</p>
-  <p>Please visit our tutorial page to see how it works.</p>
+  Welcome {{ user.username }}.  Thank you for joining the site!  Please visit our tutorial page to see how it works.
 {% endblock %}
