--- a/journal_app/templates/journal/entry_list.html
+++ b/journal_app/templates/journal/entry_list.html
@@ -12,7 +12,7 @@
         <div class="col-lg-12 outside-entry-area mb-3 pb-3 mt-1">
           <h1>{{ entry.title }}</h1>
           <p><b>Last Updated:</b> {{ entry.updated|date:"SHORT_DATETIME_FORMAT"  }}</p>
-          <a href="{{ entry.get_absolute_url }}" class="entry-link">
+          <a href="{% if released %}{% url 'journal:released_entry_detail' contact.pk entry.pk %}{% else %}{{ entry.get_absolute_url }}{% endif %}" class="entry-link">
             <div class="col-lg-12 entry-area mw-100">
                 {{ entry.body|safe|truncatewords:75 }}
             </div>
