--- a/journal_app/templates/journal/entry_detail.html
+++ b/journal_app/templates/journal/entry_detail.html
@@ -19,7 +19,7 @@
           <h6 class="text-center"><a href="{% url 'journal:entry_update' entry.uuid %}" class="btn btn-theme btn-block"><i class="far fa-edit"></i> Edit</a></h6>
         </div>
         <div class="col-lg-6">
-          <h6 class="text-center"><a href="{% url 'journal:entry_delete' entry.uuid %}" class="btn btn-theme btn-block"><i class="far fa-trash-alt"></i> Delete</a></h6>
+          <h6 class="text-center"><a href="{% url 'journal:entry_delete' entry.uuid %}" class="btn btn-theme btn-block btn-danger-hover"><i class="far fa-trash-alt"></i> Delete</a></h6>
         </div>
       </div>
     {% endif %}
