--- a/journal_app/templates/base.html
+++ b/journal_app/templates/base.html
@@ -23,9 +23,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- Your stuff: Third-party CSS libraries go here -->
+    <!-- Stripe JS -->
+    <script src="https://js.stripe.com/v3/"></script>
     <!-- Font Awesome  https://fontawesome.com/start -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- This file stores project-specific CSS -->
+
+
     {% block css %}
     <link href="{% static 'css/project.css' %}" rel="stylesheet">
     {% endblock %}
