--- a/journal_app/templates/subscription/home.html
+++ b/journal_app/templates/subscription/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}Subscriptions{% endblock %}
 
@@ -6,4 +7,8 @@
   <div class="container mt-5">
     <button type="submit" class="btn btn-large btn-block btn-theme" id="submitBtn">Subscribe</button>
   </div>
+{% endblock %}
+
+{% block extra_js %}
+  <script src="{% static "js/stripe.js" %}"></script>
 {% endblock %}
