--- a/journal_app/templates/users/user_detail.html
+++ b/journal_app/templates/users/user_detail.html
@@ -1,34 +1,49 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}User: {{ object.username }}{% endblock %}
+{% block title %}My Profile{% endblock %}
 
 {% block content %}
 <div class="container">
 
-  <div class="row">
+  <div class="row mt-2">
     <div class="col-sm-12">
-
-      <h2>{{ object.username }}</h2>
-      {% if object.name %}
-        <p>{{ object.name }}</p>
+      {% if not object.entries_released %}
+        <h2 class="mt-2">
+          <b>Check-in due by:</b> {{ object.checkin_deadline|date }}
+          <a class="btn btn-theme" href="{% url "users:checkin" user.username %}" role="button"><i class="fas fa-calendar-check"></i> Check-in</a></h2>
+        <hr/>
+      {% else %}
+        <a class="btn btn-lg btn-danger btn-block my-4" href="{% url "users:retract" request.user.username %}" role="button">Your entries have been released.  Click here to retract</a>
       {% endif %}
+      <h2>
+        <u>My Profile</u><a class="btn btn-theme ml-2" href="{% url 'users:update' %}" role="button"><i class="far fa-edit"></i> Edit</a>
+      </h2>
+      <p><b>Username:</b> {{ object.username }}<br/>
+        <b>Email:</b> {{ object.email }}
+      {% if object.name %}
+        <br/>
+        <b>Name:</b> {{ object.name }}<br/>
+      {% endif %}
+        <a href="{% url "account_change_password" %}" class="btn btn-theme"><i class="fas fa-key"></i> Reset Password</a>
+      </p>
+      <hr/>
     </div>
   </div>
 
-{% if object == request.user %}
 <!-- Action buttons -->
-<div class="row">
+<div class="row mt-3">
 
   <div class="col-sm-12">
-    <a class="btn btn-primary" href="{% url 'users:update' %}" role="button">My Info</a>
-    <a class="btn btn-primary" href="{% url 'account_email' %}" role="button">E-Mail</a>
-    <!-- Your Stuff: Custom user template urls -->
+    <h2>
+      <u>Settings</u><a class="btn btn-theme ml-2" href="{% url 'users:update' %}" role="button"><i class="far fa-edit"></i> Edit</a>
+    </h2>
+    <p><b>Days to wait without check-in until posts are released: </b> {{ object.days_to_release_setting}} days</p>
+
   </div>
 
 </div>
 <!-- End Action buttons -->
-{% endif %}
 
 
 </div>
